[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/enemy_saucer.png" type="Texture" id=1]
[ext_resource path="res://enemy/EnemyPath.tscn" type="PackedScene" id=2]
[ext_resource path="res://explosion/Explosion.tscn" type="PackedScene" id=3]
[ext_resource path="res://enemy/Enemy.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Animation" id=3]
resource_name = "flash"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "rotate"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Enemy" type="Area2D" groups=[
"enemies",
]]
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}
speed = 150
health = 3

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 3.5, 3.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/flash = SubResource( 3 )
anims/rotate = SubResource( 2 )

[node name="Explosion" parent="." instance=ExtResource( 3 )]

[node name="GunTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="EnemyPath" parent="." instance=ExtResource( 2 )]
[connection signal="animation_finished" from="Explosion/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]

[editable path="Explosion"]
